--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -63,6 +63,10 @@
       #leftside{
         text-align: left;
       }
+      #rightside{
+        margin-left: auto;
+        margin-right: 0 !important;
+      }
       .profile-pic{
         border-radius: 50%;
         width: 300px;
@@ -116,7 +120,7 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0" id="rightside">
         <% if account_signed_in? %>
           <%= render "layouts/account_nav" %>
         <% else %>
